# src/auth_factors/handlers.rs
@@ -5,12 +5,13 @@ mod ticket_proof;
 mod totp;
 
 pub use inputs::{
-    PasskeyAuthenticationInput, PasskeyRegistrationInput, PasskeyTicketInput, TotpConfirmInput,
-    TotpLoginInput, TotpSetupInput,
+    DiscoverablePasskeyFinishInput, PasskeyAuthenticationInput, PasskeyRegistrationInput,
+    PasskeyTicketInput, TotpConfirmInput, TotpLoginInput, TotpSetupInput,
 };
 pub use passkey::{
-    finish_passkey_authentication, finish_passkey_registration, start_passkey_authentication,
-    start_passkey_registration,
+    finish_discoverable_passkey_authentication, finish_passkey_authentication,
+    finish_passkey_registration, start_discoverable_passkey_authentication,
+    start_passkey_authentication, start_passkey_registration,
 };
 pub use totp::{confirm_totp_setup, login_totp, start_totp_setup};
 
